# COMPUTER-GRAPHICS

./: CMakeLists.txt
final_project/: final_project_main.cpp
final_project/model/bot/: bot.gltf
final_project/shader/: bot.frag  bot.vert  cloud.frag  cloud.vert  skybox.frag  skybox.vert
